[project]
name = "arianna-devkit"
version = "0.1.0"
description = "Tools and scripts for ARIANNA neutrino experiment data analysis"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
